--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,34 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.rainbow-outline {
+  position: relative;
+}
+
+.rainbow-outline:focus-within::after {
+  z-index: -1;
+  position: absolute;
+  content: "";
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: calc(100% + 8px);
+  height: calc(100% + 8px);
+  background: linear-gradient(#ff0000, #0000ff, #008000, #ee82ee, #ffff00);
+  background-size: 400% 400%;
+  border-radius: 26px;
+  animation: rainbrow 1s infinite ease-in-out;
+}
+
+@keyframes rainbrow {
+  0% {
+    background-position: 0%;
+  }
+  50% {
+    background-position:  90%;
+  }
+  100% {
+    background-position: 0;
+  }
+}
