--- a/app/globals.css
+++ b/app/globals.css
@@ -42,8 +42,16 @@ input:is(:-webkit-autofill, :autofill) {
   transform: translate(-50%, -50%);
   width: calc(100% + 6px);
   height: calc(100% + 6px);
-  background: linear-gradient(45deg,
-      #ff6b6b, #ff8e35, #ffd93d, #6bcf7f, #4d96ff, #9d4edd, #ff6b6b);
+  background: linear-gradient(
+    45deg,
+    #ff6b6b,
+    #ff8e35,
+    #ffd93d,
+    #6bcf7f,
+    #4d96ff,
+    #9d4edd,
+    #ff6b6b
+  );
   background-size: 400% 400%;
   border-radius: 26px;
   opacity: 0;
@@ -60,8 +68,16 @@ input:is(:-webkit-autofill, :autofill) {
   transform: translate(-50%, -50%);
   width: calc(100% + 16px);
   height: calc(100% + 16px);
-  background: linear-gradient(45deg,
-      #ff6b6b, #ff8e35, #ffd93d, #6bcf7f, #4d96ff, #9d4edd, #ff6b6b);
+  background: linear-gradient(
+    45deg,
+    #ff6b6b,
+    #ff8e35,
+    #ffd93d,
+    #6bcf7f,
+    #4d96ff,
+    #9d4edd,
+    #ff6b6b
+  );
   background-size: 400% 400%;
   border-radius: 30px;
   animation: rainbow-flow 4s linear infinite;
@@ -89,7 +105,6 @@ input:is(:-webkit-autofill, :autofill) {
   }
 }
 
-/* Estados adicionales para mejor UX */
 .rainbow-outline:hover::after {
   opacity: 0.7;
 }
@@ -148,9 +163,82 @@ input:is(:-webkit-autofill, :autofill) {
   }
 }
 
-
 .task-list {
   max-height: 0;
-  overflow: hidden;
   transition: max-height 0.2s;
+}
+.task-list::-webkit-scrollbar {
+  background: transparent;
+  width: 6px;
+}
+
+.task-list::-webkit-scrollbar-thumb {
+  background-color: #181818;
+  border-radius: 6px;
+}
+
+/* bubble chat effect */
+.task-item::before {
+  content: "";
+  width: 32px;
+  z-index: -1;
+  height: 30px;
+  position: absolute;
+  bottom: -12px;
+  left: 0;
+  background-color: #181818;
+  clip-path: polygon(0% 0%, 0 100%, 100% 100%);
+  transform: rotate(90deg);
+}
+
+.todo-modal {
+  background-color: white;
+  position: relative;
+}
+
+.todo-modal::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 24px;
+  background: linear-gradient(
+    45deg,
+    #ff6b6b,
+    #ff8e35,
+    #ffd93d,
+    #6bcf7f,
+    #4d96ff,
+    #9d4edd,
+    #ff6b6b
+  );
+  background-size: 400% 400%;
+  animation: rainbow-flow 4s linear infinite;
+  filter: blur(10px);
+  z-index: 1;
+}
+
+.move-up-animation {
+  animation: moveup 300ms cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
+}
+
+.move-down-animation {
+  animation: moveup 300ms cubic-bezier(0.075, 0.82, 0.165, 1) reverse;
+}
+
+.todo-modal > div {
+  z-index: 5;
+}
+
+@keyframes moveup {
+  0% {
+    transform: translateY(100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
