--- a/app/globals.css
+++ b/app/globals.css
@@ -58,7 +58,7 @@ input:is(:-webkit-autofill, :autofill) {
   transition: opacity 0.3s ease;
   animation: rainbow-flow 4s linear infinite;
 }
-
+/* Blur */
 .rainbow-outline::before {
   z-index: -1;
   position: absolute;
@@ -177,20 +177,6 @@ input:is(:-webkit-autofill, :autofill) {
   border-radius: 6px;
 }
 
-/* bubble chat effect */
-.task-item::before {
-  content: "";
-  width: 32px;
-  z-index: -1;
-  height: 30px;
-  position: absolute;
-  bottom: -12px;
-  left: 0;
-  background-color: #181818;
-  clip-path: polygon(0% 0%, 0 100%, 100% 100%);
-  transform: rotate(90deg);
-}
-
 .todo-modal {
   background-color: white;
   position: relative;
@@ -220,6 +206,21 @@ input:is(:-webkit-autofill, :autofill) {
   z-index: 1;
 }
 
+.rainbow {
+  background: linear-gradient(
+    45deg,
+    #ff6b6b,
+    #ff8e35,
+    #ffd93d,
+    #6bcf7f,
+    #4d96ff,
+    #9d4edd,
+    #ff6b6b
+  );
+  background-size: 400% 400%;
+  animation: rainbow-flow 4s linear infinite;
+}
+
 .move-up-animation {
   animation: moveup 300ms cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
 }
@@ -240,5 +241,44 @@ input:is(:-webkit-autofill, :autofill) {
   100% {
     transform: translateY(0);
     opacity: 1;
+  }
+}
+
+.text-otlined {
+  -webkit-text-stroke: 1px white;
+  color: transparent;
+  font-weight: 900;
+}
+
+.task-active-eff {
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  /* background: red; */
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+  z-index: -50;
+  overflow: hidden;
+}
+
+/* .task-eff::after {
+  content: "";
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  background: blue;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  animation: rotate 5s linear infinite;
+  transform-origin: center;
+} */
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
